--- a/index.html
+++ b/index.html
@@ -5,35 +5,41 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Optica WE</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="shortcut icon" href="img/icons8-glasses-67.png" type="image/x-icon">
     <link rel="stylesheet" href="css/styles.css">
 </head>
-<body>
-    <header>
-        <nav>
-            <div id="menu">
-            <ul>
-                <li class="manu_opcion">
-                    <a class="menu_opcion_link" href="">Home</a>
-                </li>
-                <li class="manu_opcion">
-                    <a class="menu_opcion_link" href="paginas/gafas.html">Gafas</a>
-                </li>
-                <li class="manu_opcion" >
-                    <a class="menu_opcion_link" href="paginas/marcos.html">Marcos</a>
-                </li>
-                <li class="manu_opcion" >
-                    <a class="menu_opcion_link" href="paginas/lentes.html">Lentes</a>
-                </li>
-                <li class="manu_opcion" >
-                    <a class="menu_opcion_link" href="paginas/contacto.html">Contacto</a>
-                </li>
-            </ul>
-        </div>
-        </nav>
+<body class="cuerpo">
+    <header class="head">
+        <nav class="navbar navbar-expand-lg navbar-dark bg-dark ">
+            <div class="container-fluid">
+              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+              </button>
+              <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav">
+                  <li class="nav-item">
+                    <a class="nav-link active" aria-current="page" href="index.html">Home</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="paginas/gafas.html">Gafas</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="paginas/marcos.html">Marcos</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="paginas/lentes.html">Lentes</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="paginas/contacto.html">Contacto</a>
+                  </li>
+                </ul>
+              </div>
+            </div>
+          </nav>
     </header> 
     <div class="titulos">
-        <h1>Opctica WE</h1>
+        <h1 class="display-1" >Opctica WE</h1>
     </div>
     <div id="logos">
         <img class="logo" src="img/logo2.png" alt="">
@@ -44,7 +50,7 @@
 
 <section class="grid">
     <div class="intergrid">
-        <h3>Nuestros servicios</h3>
+        <h3 >Nuestros servicios</h3>
         <ul class="intergrid_list">
             <li>Examem optico</li>
             <li>arreglo de gafas</li>
@@ -53,8 +59,8 @@
         </ul>
     </div>
     <div>
-        <div>
-            <h3 class="intergrid">Donde encontrarnos </h3>
+        <div class="intergrid">
+            <h3 >Donde encontrarnos </h3>
         </div>
         <div class="intergrid_sub">
             <iframe class="intergrid_sub_map" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d418.02439786087155!2d-74.0748170911102!3d4.604639847695267!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8e3f99a0c2a7aaf9%3A0x489c6c584738f1a2!2zQ3JhLiA5ICMxNTQ0LCBCb2dvdMOh!5e0!3m2!1ses-419!2sco!4v1646843153408!5m2!1ses-419!2sco" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
@@ -64,5 +70,6 @@
         <footer>
             <h4> copyright by Jose Gutierrez contact to guti9818@hotmail.com</h4>         
         </footer>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 </body>
 </html>
