--- a/paginas/contacto.html
+++ b/paginas/contacto.html
@@ -5,36 +5,44 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contacto</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="shortcut icon" href="../img/icons8-glasses-67.png" type="image/x-icon">
     <link rel="stylesheet" href="../css/styles.css">
 </head>
-<body>
+<body class="cuerpo">
     <header>
-        <nav>
-            <ul id="menu">
-                <li class="manu_opcion" > 
-                    <a  class="menu_opcion_link" href="../index.html">Home</a>
-                </li>
-                <li class="manu_opcion">
-                    <a class="menu_opcion_link" href="gafas.html">Gafas</a>
-                </li>
-                <li class="manu_opcion">
-                    <a class="menu_opcion_link" href="marcos.html">Marcos</a>
-                </li>
-                <li class="manu_opcion">
-                    <a class="menu_opcion_link" href="lentes.html">Lentes</a>
-                </li>
-                <li class="manu_opcion">
-                    <a class="menu_opcion_link" href="contacto.html">Contacto</a>
-                </li>
-            </ul>
-        </nav>
+        <nav class="navbar navbar-expand-lg navbar-dark bg-dark ">
+            <div class="container-fluid">
+              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+              </button>
+              <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav">
+                  <li class="nav-item">
+                    <a class="nav-link active" aria-current="page" href="../index.html">Home</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="gafas.html">Gafas</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="marcos.html">Marcos</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="lentes.html">Lentes</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="contacto.html">Contacto</a>
+                  </li>
+                </ul>
+              </div>
+            </div>
+          </nav>
     </header> 
     <div class="titulossec">
-    <h1>como contactarnos</h1>
+    <h1 class="display-1">como contactarnos</h1>
     </div>
     <div class="subtitulo">
-    <h2>para poder estar en contacto contigo por favor llena el siguiente formulario y dentro de las proximas horas nos estaremos contactando</h2>
+    <h2 class="display-2">para poder estar en contacto contigo por favor llena el siguiente formulario y dentro de las proximas horas nos estaremos contactando</h2>
     </div> 
     <fieldset>
     <form action="">
